fix: add extra margin spacing to nav menu

--- a/packages/vue-component-library/src/styles/ftva/_header-sticky.scss
+++ b/packages/vue-component-library/src/styles/ftva/_header-sticky.scss
@@ -6,6 +6,7 @@
         width: 100%;
         margin: 0 auto;
         padding: 0;
+        margin-inline: 18px;
 
         .donate-button {
             display: flex;
@@ -21,6 +22,7 @@
     @media #{$small} {
         .primary {
             padding-inline: 18px;
+            margin-inline: 0;
         }
     }
 }
