--- a/packages/vue-component-library/src/styles/ftva/_nav-primary.scss
+++ b/packages/vue-component-library/src/styles/ftva/_nav-primary.scss
@@ -117,7 +117,7 @@
 
         &.is-opened-mobile {
             height: 100vh;
-            overflow-y: scroll;
+            overflow-y: auto;
         }
 
         .item-top-mobile {
